; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/iwlwifi/mvm/extr_nvm.c_iwl_nvm_read_section.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/iwlwifi/mvm/extr_nvm.c_iwl_nvm_read_section.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iwl_mvm = type { i32 }

@IWL_NVM_DEFAULT_CHUNK_SIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [54 x i8] c"Cannot read NVM from section %d offset %d, length %d\0A\00", align 1
@.str.1 = private unnamed_addr constant [31 x i8] c"NVM section %d read completed\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.iwl_mvm*, i32, i32*)* @iwl_nvm_read_section to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iwl_nvm_read_section(%struct.iwl_mvm* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.iwl_mvm*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.iwl_mvm* %0, %struct.iwl_mvm** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32 0, i32* %9, align 4
  %11 = load i32, i32* @IWL_NVM_DEFAULT_CHUNK_SIZE, align 4
  store i32 %11, i32* %8, align 4
  %12 = load i32, i32* %8, align 4
  store i32 %12, i32* %10, align 4
  br label %13

13:                                               ; preds = %33, %3
  %14 = load i32, i32* %10, align 4
  %15 = load i32, i32* %8, align 4
  %16 = icmp eq i32 %14, %15
  br i1 %16, label %17, label %37

17:                                               ; preds = %13
  %18 = load %struct.iwl_mvm*, %struct.iwl_mvm** %5, align 8
  %19 = load i32, i32* %6, align 4
  %20 = load i32, i32* %9, align 4
  %21 = load i32, i32* %8, align 4
  %22 = load i32*, i32** %7, align 8
  %23 = call i32 @iwl_nvm_read_chunk(%struct.iwl_mvm* %18, i32 %19, i32 %20, i32 %21, i32* %22)
  store i32 %23, i32* %10, align 4
  %24 = load i32, i32* %10, align 4
  %25 = icmp slt i32 %24, 0
  br i1 %25, label %26, label %33

26:                                               ; preds = %17
  %27 = load %struct.iwl_mvm*, %struct.iwl_mvm** %5, align 8
  %28 = load i32, i32* %6, align 4
  %29 = load i32, i32* %9, align 4
  %30 = load i32, i32* %8, align 4
  %31 = call i32 @IWL_ERR(%struct.iwl_mvm* %27, i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str, i64 0, i64 0), i32 %28, i32 %29, i32 %30)
  %32 = load i32, i32* %10, align 4
  store i32 %32, i32* %4, align 4
  br label %42

33:                                               ; preds = %17
  %34 = load i32, i32* %10, align 4
  %35 = load i32, i32* %9, align 4
  %36 = add nsw i32 %35, %34
  store i32 %36, i32* %9, align 4
  br label %13

37:                                               ; preds = %13
  %38 = load %struct.iwl_mvm*, %struct.iwl_mvm** %5, align 8
  %39 = load i32, i32* %6, align 4
  %40 = call i32 @IWL_INFO(%struct.iwl_mvm* %38, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0), i32 %39)
  %41 = load i32, i32* %9, align 4
  store i32 %41, i32* %4, align 4
  br label %42

42:                                               ; preds = %37, %26
  %43 = load i32, i32* %4, align 4
  ret i32 %43
}

declare dso_local i32 @iwl_nvm_read_chunk(%struct.iwl_mvm*, i32, i32, i32, i32*) #1

declare dso_local i32 @IWL_ERR(%struct.iwl_mvm*, i8*, i32, i32, i32) #1

declare dso_local i32 @IWL_INFO(%struct.iwl_mvm*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
